# net-diag

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  build_release.sh  pyproject.toml
.github/scripts/: create_release.sh  upload_release.sh
.github/workflows/: build-binary.yml
api/: trane_urls.txt
api/Net Diagnostics/: bruno.json
api/Net Diagnostics/OpenProject/: API Root.bru  Global Statuses.bru  Global Types.bru  Workspace Details.bru  Workspace Workpackage Types.bru  Workspace Workpackages Schema.bru  Workspace Workpackages.bru  Workspaces Schema.bru  folder.bru
api/Net Diagnostics/Trane Tracer Synchrony/: API bacnets.bru  API bridges.bru  API device_details.bru  API devices.bru  API discover_bridges.bru  API general_info.bru  API interfaces.bru  Get About.bru  Get Available Networks.bru  Get Bacnet Datalinks.bru  Get Config Bacnet linkdata.bru  Get Config BacnetGlobal.bru  Get Config DefaultLogLevel.bru  Get Config Dimension Temperature.bru  Get Config Time.bru  Get Equipment Details.bru  Get Equipment InstalledSummary.bru  Get License Features.bru  Get License.bru  Get Serial Number.bru  Get ipNetworkConfig.bru  folder.bru
api/Net Diagnostics/environments/: .gitignore  Example.bru
src/net_diag/: network_diag.py  network_discover.py
src/net_diag/libs/: host.py  nativeping.py  net_utils.py  openprojectsync.py  snmputils.py  suitecrmsync.py
src/net_diag/libs/scanners/: __init__.py  http.py  icmp.py  snmp.py  trane.py
src/net_diag/tests/data/http_tracer/tracer_4_40/: bacnets.txt  devices.txt  discover_bridges.txt  index.txt
src/net_diag/tests/data/http_tracer/tracer_6_10/: device_details.txt  discover_bridges.txt  general_info.txt  index.txt  interfaces.txt
src/net_diag/tests/data/snmp/: axis-212ptz.txt  axis-m3004.txt  axis-m3005.txt  brother-mfc9330.txt  mikrotik-rb3011.txt  mikrotik-sw.txt  tplink-24poe.txt  tplink-jetstream-24poe.txt  unifi-ac-lite.txt  unifi-ac-pro.txt  unifi-udm-pro.txt  unifi-us8-60w.txt  unifi-usw24poe.txt  unifi-uxg-lite.txt  vivotek-fd8161.txt
src/net_diag/tests/data/tracer_4_40/: bridges.txt  device_details.txt  general_info.txt  interfaces.txt
src/net_diag/tests/data/tracer_6_10/: bacnets.txt  bridges.txt  devices.txt
src/net_diag/tests/libs/: test_host.py  test_net_utils.py
src/net_diag/tests/libs/scanners/: test_snmp.py  test_trane.py
